# linkshield

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  activate_project.sh  activate_project.sh   check_statuses.py  fix_path.sh  fix_test_imports.py  generate_dashboard.py  linkshield_api.py  password.encrypted  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  requirements.txt.backup
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: linkshield_api.py  main.py
app/data/: report_data.json
app/infra/: __init__.py  browser_executor.py  input_urls.txt
app/infra/security/: __init__.py  ssl_context_loader.py
app/reports/: LinkScannerTestReport_2025-05-15_12-43-47.html  LinkScannerTestReport_2025-05-15_14-50-15.html  LinkScannerTestReport_2025-05-22_15-01-16.html  custom_report.html  full_test_report_2025-05-15_16-59-39.html  full_test_report_2025-05-15_21-11-19.html  generator.py  scan_report_20250518_170112.html  scan_report_20250518_200859.html  scan_report_20250518_202640.html  scan_report_20250518_204236.html  scan_report_20250519_130927.html  summary.html  test_report.html
app/reports/2025-05-19/: scan_213917_1.html  scan_213920_2.html  scan_213920_3.html  summary.html
app/reports/2025-05-20/: summary.html
app/reports/2025-05-21/: summary.html
app/reports/2025-05-23/: summary.html
app/reports/renderers/: __init__.py  combined_report_renderer.py  html_report_renderer.py  summary_assets.py  summary_loader.py  summary_renderer.py  summary_stats.py
app/reports/templates/: __init__.py  custom_report_template.py
app/reports/utils/: __init__.py  report_utils.py
app/scanner/: config.py  exceptions.py  fake_executor.py  link_scanner.py  types.py
app/scanner/signals/: __init__.py  iframe_signal.py  js_behavior_signal.py  network_anomaly_signal.py  network_request_collector.py  redirect_signal.py  types.py  url_keyword_signal.py  visual_signal.py
app/services/: __init__.py  scan_service.py
app/ui/: __init__.py
app/utils/: mail_utils.py  report_stats.py
results/: report_data.json
results/html_reports/: scan_report_20250519_144921.html
scripts/: dev_network_scan.py  run_secure_api.py
scripts/reporting/: custom_report_generator.py  encrypt_password.py  generate_report.py  run_tests_html.py  send_secure_report.py
scripts/runners/: batch_scanner.py  debug_direct_scan.py  full_test_pipeline.py  manual_scan.py
scripts/test_helpers/: generate_dummy_screenshot.py  generate_test_image.py  manual_ocr_test.py  test_playwright.py
tests/: conftest.py  generate_test_assets.py
tests/integration/: README.md  __init__.py  conftest.py
tests/resources/: __init__.py
tests/test_scanner/: __init__.py  test_link_scanner.py  test_link_scanner_anomaly.py  test_link_scanner_combined.py  test_link_scanner_iframe.py
tests/test_security/: __init__.py  test_ssl_context_loader.py
tests/test_services/: __init__.py  test_scan_service.py
tests/test_signals/: __init__.py  test_form_signal.py  test_js_behavior_signal.py  test_ocr_signal.py
tests/test_utils/: __init__.py  test_test_assets.py
